--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -3587,7 +3587,7 @@
         "title": "Discover our Live Catalog",
         "description": "Unlock a new world of crypto possibilities. One secure access to all services – DeFi, NFTs and more to come."
       },
-      "twitterBanner":  {
+      "twitterBanner": {
         "description": "Tell us what's the next service you want to see with the hashtag",
         "tweetText": "The next Ledger App should be..."
       },
@@ -3598,6 +3598,11 @@
       "developerCTA": {
         "title": "For Developers",
         "description": "All the information you need to integrate your applications on Ledger Live."
+      }
+    },
+    "webPlatformPlayer": {
+      "infoPanel": {
+        "website": "website"
       }
     }
   }
